# pyrosa

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
pyrosa/: __init__.py  _core.py
